--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <h1>Hello I'm</h1>
         <h1>RamZzz</h1>
         <h1>Dev.</h1>
-        <img id="img1" src="https://plus.unsplash.com/premium_photo-1669824394348-f5cac6eab7d4?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+        <img id="img1" src="1.jpg" alt="">
 
-        <img id="img2" src="https://plus.unsplash.com/premium_photo-1668896122554-2a4456667f65?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+        <img id="img2" src="2.jpg" alt="">
 
-        <img id="img3" src="https://images.unsplash.com/photo-1529139574466-a303027c1d8b?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+        <img id="img3" src="3.jpg" alt="">
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
